Handle managed confidential requests
